# socialdataanalysis

./: .gitignore  README.md  finalProject.ipynb  machineLearning.ipynb  machineLearning.py  main.py  pyproject.toml
data/: hospitals.csv
figs/: bokeh1.html  bokeh2.html  bokeh_call_types.html  bokeh_neighborhoods.html  bokeh_response_neighborhoods.html  calls_per_day.html  feature_importance_random_forest.html  feature_importance_tree_based.html  response_day_period.html  response_transport_neighborhood_years.html  split_time.html
pitch/: pitch.py
src/: finalProject.ipynb  machine_learning.py  magga.py  magnea.py  plt.py  signy.py
utils/: const.py  help_functions.py  make_data.py  notes.txt  plot_functions.py
