[tool.poetry]
name = "socialdataanalysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
datetime = "^5.1"
bokeh = "^3.1.0"
folium = "^0.14.0"
plotly = "^5.14.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
statsmodels = "^0.13.5"
calplot = "^0.1.7.5"
scikit-learn = "^1.2.2"
ipywidgets = "^8.0.6"
notebook = "^6.5.4"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
